--- a/FMS/Views/LiveForklifsPages/ActualParametersPage.xaml
+++ b/FMS/Views/LiveForklifsPages/ActualParametersPage.xaml
@@ -6,13 +6,14 @@
     xmlns:local="clr-namespace:FMS.Views.LiveForklifsPages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="ActualParametersPage"
-    d:DesignHeight="450"
+    d:DesignHeight="900"
     d:DesignWidth="800"
     mc:Ignorable="d">
 
     <Grid>
         <StackPanel>
             <StackPanel Margin="300,0,0,0" Orientation="Horizontal">
+                <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/RefreshDateWhite.png" />
                 <TextBlock
                     HorizontalAlignment="Center"
                     FontSize="20"
@@ -30,7 +31,45 @@
                 Margin="0,2,0,0"
                 Background="White" />
             <StackPanel Margin="300,10,0,0" Orientation="Horizontal">
-                <StackPanel Width="50" />
+                <StackPanel Width="30">
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/PositionWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/PositionWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/RotationWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/BatteryWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/BatteryWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/BatteryRed.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/ForksHeightWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/ForksHeightWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/ActualForksWeightWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/SavedWeightWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/TiltWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/TiltWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/DistanceWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/SteeringWHite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/PwmWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+                    <Image Height="30" Source="/Models/Resources/ItemsIcons/LiveData/SpeedWhite.png" />
+                    <Separator Height="2.5" Margin="0,0,0,0" />
+
+                </StackPanel>
                 <StackPanel Margin="10,0,0,0">
                     <TextBlock
                         FontSize="20"
