--- a/FMS/Views/Main/LoginPage.xaml
+++ b/FMS/Views/Main/LoginPage.xaml
@@ -43,7 +43,7 @@
                     Orientation="Vertical">
                     <TextBox MinWidth="300" Text="{Binding Username}" />
                     <Separator Height="10" />
-                    <ui:PasswordBox MinWidth="300" Text="{Binding Password}" />
+                    <ui:PasswordBox MinWidth="300" Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 </StackPanel>
 
             </StackPanel>
